# a5-py

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: bench.yml  test.yml
a5/: __init__.py
a5/core/: a5_math.py  a5_types.py  authalic.py  cell.py  cell_info.py  compact.py  constants.py  coordinate_systems.py  coordinate_transforms.py  dodecahedron.py  face_adjacency.py  gnomonic.py  hex.py  hilbert.py  origin.py  pentagon.py  project.py  quat.py  serialization.py  spherical_polygon.py  tiling.py  triangle.py  utils.py  warp.py
a5/geometry/: __init__.py  pentagon.py  prepared_polygon.py  spherical_polygon.py  spherical_triangle.py
a5/lattice/: __init__.py  anchor.py  basis.py  compat.py  curve.py  hilbert.py  quaternary.py  shift_digits.py  triple.py  types.py
a5/math/: __init__.py  mat2.py  quat.py  vec2.py  vec3.py
a5/projections/: authalic.py  crs.py  dodecahedron.py  equal_area.py  polyhedral.py
a5/regions/: __init__.py  polygon.py
a5/traversal/: __init__.py  cap.py  global_neighbors.py  grid_disk.py  lattice_boundary.py  lattice_flood_fill.py  lattice_neighbors.py  line.py  neighbors.py  quintant_neighbors.py
a5/utils/: __init__.py  great_circle.py  spiral.py  vector.py  vector_np.py
benchmarks/: __init__.py  bench_cap.py  bench_cell.py  bench_compact.py  bench_curve.py  bench_grid_disk.py  bench_hex.py  bench_hierarchy.py  bench_hilbert.py  bench_line.py  bench_polygon.py  bench_projections.py  utils.py
examples/wireframe/: index.py
scripts/: compare_benchmarks.py
tests/: matchers.py
(+48 files in other folders)
